@@ -2,6 +2,7 @@ next
 ----
 -bsml2chado: PostgreSQL chado ddls corrected to prevent failure in createindex step
 -ps_scan: added --pfscan and --psa2msa options to include paths to the respective binaries. Also added $;PFSCAN$; and $;PSA2MSA$; variables to default software config.
+-predict_prokaryotic_gene_function: minor name processing updates
 
 ergatis-v2r9b1
 --------------
